Fix up URL(String) constructor deprecations.
This is part of a fix for #21